Fix right-alignment of search results
The `<div class="search-result-container">` (which contains the search
results and, on user and group pages, the search sidebar) had a
`margin-right: 30px;`. This is supposed to line up with the right margin
of the `<header class="nav-bar">` but it didn't - the header's right
margin is 60px.

So fix the search result container's margin to match the header's.

--- a/h/static/styles/partials-v2/_search.scss
+++ b/h/static/styles/partials-v2/_search.scss
@@ -39,7 +39,7 @@
   // Align the left edge of the search result list with the left edge of the
   // navbar content.
   margin-left: 30px;
-  margin-right: 30px;
+  margin-right: 60px;
 }
 
 .search-result-container--empty {
